k8s/heimdall/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '10'
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"heimdall","namespace":"heimdall"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"heimdall"}},"template":{"metadata":{"labels":{"app":"heimdall"}},"spec":{"containers":[{"image":"linuxserver/heimdall:2.5.4","name":"heimdall","ports":[{"containerPort":80}],"volumeMounts":[{"mountPath":"/config","name":"heimdall-data"}]}],"volumes":[{"name":"heimdall-data", [...]

      '
  name: heimdall
  namespace: heimdall
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: heimdall
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2025-11-08T21:02:49+01:00'
      labels:
        app: heimdall
    spec:
      containers:
      - image: linuxserver/heimdall:2.5.4
        imagePullPolicy: IfNotPresent
        name: heimdall
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: heimdall-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: heimdall-data
        persistentVolumeClaim:
          claimName: heimdall-data
