k8s/heimdall/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod-dns01","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"heimdall-ingress","namespace":"heimdall"},"spec":{"ingressClassName":"nginx","rules":[{"host":"heimdall.k8sops.online","http":{"paths":[{"backend":{"service":{"name":"heimdall","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"ho [...]

      '
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  name: heimdall-ingress
  namespace: heimdall
spec:
  ingressClassName: nginx
  rules:
  - host: heimdall.k8sops.online
    http:
      paths:
      - backend:
          service:
            name: heimdall
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - heimdall.k8sops.online
    secretName: heimdall-k8sops-online-tls
